dynamix/force-app/main/default/objects/Project_Advanced_Payment__c/Project_Advanced_Payment__c.object-meta.xml
<CustomObject>
    <label>Project Advanced Payment</label>
    <nameField>
        <displayFormat>PAP-{0000}</displayFormat>
        <label>Project Advanced payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Advanced Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>