dynamix/force-app/main/default/objects/Project_Advanced_Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Advanced Payments</relationshipLabel>
    <relationshipName>Project_Advanced_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>