dynamix/force-app/main/default/objects/Project_Advanced_Payment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Advanced Payments</relationshipLabel>
    <relationshipName>Project_Advanced_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>