dynamix/force-app/main/default/objects/Project_Advanced_Payment__c/listViews/S_M_Head_Project_Advanced_Payment.listView-meta.xml
<ListView>
    <fullName>S_M_Head_Project_Advanced_Payment</fullName>
    <filterScope>Queue</filterScope>
    <label>S&amp;M Head</label>
    <queue>S_M_Head</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>